--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Khairul Amirin CV</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <style>
+   <style>
+    html {
+      scroll-padding-top: 100px; /* This adds space for fixed navbar */
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
