--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
 
 <body class="bg-blue-100 text-gray-800">
 
- <nav class="bg-white shadow fixed w-full z-20 top-0 left-0">
+<nav class="bg-white shadow fixed w-full z-20 top-0 left-0">
   <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
     <h1 class="text-xl font-bold text-blue-700">Khairul Amirin</h1>
     <button class="md:hidden" onclick="document.getElementById('menu').classList.toggle('hidden')">
       <i class="fas fa-bars text-xl text-blue-700"></i>
     </button>
-    <ul id="menu" class="hidden md:flex space-x-6 text-sm font-medium text-blue-600">
-      <li><a href="#about" class="hover:underline">About</a></li>
-      <li><a href="#education" class="hover:underline">Education</a></li>
-      <li><a href="#skills" class="hover:underline">Skills</a></li>
-      <li><a href="#projects" class="hover:underline">Projects</a></li>
-      <li><a href="#contact" class="hover:underline">Contact</a></li>
-    </ul>
   </div>
+  <ul id="menu" class="hidden md:flex md:flex-row flex-col md:items-center bg-white md:bg-transparent px-4 md:px-0 py-2 md:py-0 space-y-2 md:space-y-0 md:space-x-6 text-sm font-medium text-blue-600">
+    <li><a href="#about" class="hover:underline block">About</a></li>
+    <li><a href="#education" class="hover:underline block">Education</a></li>
+    <li><a href="#skills" class="hover:underline block">Skills</a></li>
+    <li><a href="#projects" class="hover:underline block">Projects</a></li>
+    <li><a href="#contact" class="hover:underline block">Contact</a></li>
+  </ul>
 </nav>
+
 
   <div class="max-w-4xl mx-auto pt-24 px-4">
 
