--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <button class="md:hidden" onclick="document.getElementById('menu').classList.toggle('hidden')">
       <i class="fas fa-bars text-xl text-blue-700"></i>
     </button>
-    <ul id="menu" class="hidden md:flex space-x-6 text-sm font-medium text-blue-600">
-      <li><a href="#about" class="hover:underline">About</a></li>
-      <li><a href="#education" class="hover:underline">Education</a></li>
-      <li><a href="#skills" class="hover:underline">Skills</a></li>
-      <li><a href="#projects" class="hover:underline">Projects</a></li>
-      <li><a href="#contact" class="hover:underline">Contact</a></li>
-    </ul>
+    <ul id="menu" class="hidden md:flex md:flex-row flex-col md:items-center bg-white md:bg-transparent px-4 md:px-0 py-2 md:py-0 space-y-2 md:space-y-0 md:space-x-6 text-sm font-medium text-blue-600 absolute top-full left-0 w-full md:static md:w-auto">
+      <li><a href="#about" class="hover:underline block">About</a></li>
+      <li><a href="#education" class="hover:underline block">Education</a></li>
+      <li><a href="#skills" class="hover:underline block">Skills</a></li>
+      <li><a href="#projects" class="hover:underline block">Projects</a></li>
+      <li><a href="#contact" class="hover:underline block">Contact</a></li>
+     </ul>
   </div>
 </nav>
 
